--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,8 @@ botocore==1.15.5
 dj-database-url==0.5.0
 Django==3.0.3
 django-crispy-forms==1.8.1
-django-storages==1.9.1
+-e git+https://github.com/jschneier/django-storages.git@3e5fdfc3dcdd147b6e7b1873e158622f608dda37#egg=django_storages
+django-storages-redux==1.3.3
 docutils==0.15.2
 gunicorn==20.0.4
 jmespath==0.9.4
