--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 asgiref==3.2.3
-boto3==1.12.5
+# boto3==1.12.5
 botocore==1.15.5
 dj-database-url==0.5.0
 Django==3.0.3
@@ -15,7 +15,7 @@ psycopg2-binary==2.8.4
 python-dateutil==2.8.1
 pytz==2019.3
 s3transfer==0.3.3
-six==1.14.0
+# six==1.14.0
 sqlparse==0.3.0
 urllib3==1.25.8
 whitenoise==5.0.1
